updated the css, fixed the padding and mobile responsive

--- a/DapperPOC/Views/Shared/_WFLayout.cshtml
+++ b/DapperPOC/Views/Shared/_WFLayout.cshtml
@@ -16,15 +16,15 @@
             <div class="col-lg-2 col-md-4 col-sm-4">
                 <img src="~/images/wells-fargo.png" />
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-4"></div>
-            <div class="col-lg-2 col-md-4 col-sm-4 dv-text-trade">TRADE FAIL REPORTING</div>
+            <div class="col-lg-2 col-md-4 col-sm-3"></div>
+            <div class="col-lg-3 col-md-4 col-sm-5 dv-text-trade">TRADE FAIL REPORTING</div>
             <div class="col-lg-1 col-md-4 col-sm-4"><span class="spn-dev">DEV</span></div>
-            <div class="col-lg-1 col-md-4 col-sm-4 dv-text-white">
+            <div class="col-lg-1 col-md-4 col-sm-3 dv-text-white">
                 <i class="fas fa-bell"></i>
                 <i class="fas fa-caret-down dr-down"></i>
                 <span class="spn-count">6</span>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-4 dv-text-white "><span> Welcome <u>Katkuru, Bramara</u><i class="fas fa-caret-down"></i><i class="fas fa-user-circle"></i></span></div>
+            <div class="col-lg-3 col-md-4 col-sm-5 dv-text-white dv-welcome-text"><span> Welcome <u>Katkuru, Bramara</u><i class="fas fa-caret-down"></i><i class="fas fa-user-circle"></i></span></div>
         </div>
     </header>
 
