--- a/DapperPOC/Views/Shared/_WFLayout.cshtml
+++ b/DapperPOC/Views/Shared/_WFLayout.cshtml
@@ -13,12 +13,12 @@
 
     <header class="main-header">
         <div class="row m-0 dv-header">
-            <div class="col-lg-4 col-md-4 col-sm-8">
+            <div class="col-lg-4 col-md-4 col-sm-12">
                 <div class="row">
-                    <div class="col-lg-3 col-md-4 col-sm-4">
+                    <div class="col-lg-2 col-md-4 col-sm-6">
                         <img src="~/images/wells-fargo-2.png" />
                     </div>
-                    <div class="col-lg-8 col-md-8 col-sm-8 "><strong><span class="dv-text-trade">TRADE FAIL REPORTING</span></strong>&nbsp;&nbsp;<span class="spn-dev">DEV</span></div>
+                    <div class="col-lg-8 col-md-8 col-sm-6 dv-text-trade-dev"><strong><span class="dv-text-trade">TRADE FAIL REPORTING</span></strong>&nbsp;&nbsp;<span class="spn-dev">DEV</span></div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-1"></div>
@@ -27,11 +27,11 @@
                 <i class="fas fa-caret-down dr-down"></i>
                 <span class="spn-count">6</span>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-5 dv-text-white dv-welcome-text">
+            <div class="col-lg-3 col-md-5 col-sm-9 dv-text-white dv-welcome-text">
                 <a id="navbarDropdown" class="user-details" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span> Welcome <u>Katkuru, Bramara</u>&nbsp;<i class="fas fa-caret-down"></i></span>
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#"><i class="fas fa-cog"></i> Preferences</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
@@ -74,7 +74,7 @@
         </main>
     </div>
     <footer class="footer">
-        <div class="container">
+        <div class="container dv-footer-container">
             <span class="text-muted">Last Login: <span id="datetime"></span> |</span>
             <span class="text-muted">Version 1.0</span>
         </div>
