header name css changes

--- a/DapperPOC/Views/Shared/_WFLayout.cshtml
+++ b/DapperPOC/Views/Shared/_WFLayout.cshtml
@@ -13,12 +13,12 @@
 
     <header class="main-header">
         <div class="row m-0 dv-header">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-5">
+                <div class="display-flex">
+                    <div>
                         <img src="~/images/wells-fargo-2.png" />
                     </div>
-                    <div class="col-lg-8 col-md-8 col-sm-6 dv-text-trade-dev"><strong><span class="dv-text-trade">TRADE FAIL REPORTING</span></strong>&nbsp;&nbsp;<span class="spn-dev">DEV</span></div>
+                    <div class="dv-text-trade-dev"><strong><span class="dv-text-trade">TRADE FAIL REPORTING</span></strong>&nbsp;&nbsp;<span class="spn-dev">DEV</span></div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-1"></div>
