--- a/DapperPOC/wwwroot/css/wellsfargo.css
+++ b/DapperPOC/wwwroot/css/wellsfargo.css
@@ -74,7 +74,7 @@
 }
 
 @media (min-width:576px) {
-    .dv-welcome-text, .dv-text-trade-dev {
+    .dv-welcome-text {
         text-align: right !important;
     }
 
@@ -105,4 +105,7 @@
 
 .dv-footer-container {
     float: left;
+}
+.display-flex{
+    display:flex;
 }
